Update dotfiles from new Arch installation

--- a/dot_config/hypr/keybings.conf
+++ b/dot_config/hypr/keybings.conf
@@ -62,7 +62,7 @@ bind = $mainMod,          9,         workspace,          9
 bind = $mainMod,          0,         workspace,          10
 bind = $mainMod,          i,         workspace,          e+1
 bind = $mainMod,          n,         workspace,          e-1
-bind = $mainMod,          TAB,       focusurgentorlast,
+bind = $mainMod,          TAB,       focuscurrentorlast
 
 # move focus window to workspace
 bind = $mainMod SHIFT,    1,         movetoworkspace,    1
